[gd_scene load_steps=44 format=2]

[ext_resource path="res://characters/enemies/ballbot/idleSprite.png" type="Texture" id=1]
[ext_resource path="res://characters/enemies/ballbot/attackSprite.png" type="Texture" id=2]
[ext_resource path="res://characters/enemies/ballbot/runSprite.png" type="Texture" id=3]
[ext_resource path="res://characters/enemies/ballbot/BallBot Spawn.png" type="Texture" id=4]
[ext_resource path="res://characters/enemies/ballbot/BallBot Death.png" type="Texture" id=5]
[ext_resource path="res://characters/enemies/ballbot/ballbot.gd" type="Script" id=6]

[sub_resource type="Animation" id=35]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("idle/idleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=36]
resource_name = "attack"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("attack/attackSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=37]
resource_name = "run"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("run/runSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 42, 0, 42, 39 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 42, 39, 42, 39 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 42, 78, 42, 39 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 42, 117, 42, 39 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 42, 156, 42, 39 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 42, 0, 42, 39 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 42, 39, 42, 39 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 42, 78, 42, 39 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 42, 117, 42, 39 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 42, 156, 42, 39 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 126, 39 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 39, 126, 39 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 78, 126, 39 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 117, 126, 39 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 156, 126, 39 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 195, 126, 39 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 234, 126, 39 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 273, 126, 39 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 42, 0, 42, 39 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 42, 39, 42, 39 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 42, 78, 42, 39 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 42, 117, 42, 39 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 42, 156, 42, 39 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 42, 195, 42, 39 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 42, 234, 42, 39 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 42, 273, 42, 39 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 42, 156, 42, 39 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 42, 117, 42, 39 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 42, 78, 42, 39 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 42, 39, 42, 39 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 42, 0, 42, 39 )

[sub_resource type="SpriteFrames" id=63]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": false,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 4 ) ],
"loop": false,
"name": "spawn",
"speed": 1.0
} ]

[sub_resource type="Animation" id=64]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=65]
extents = Vector2( 11.25, 11.5 )

[node name="ballbot" type="KinematicBody2D"]
script = ExtResource( 6 )

[node name="idle" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 35 )

[node name="idleSprite" type="Sprite" parent="idle"]
visible = false
position = Vector2( 72.832, -23.3345 )
texture = ExtResource( 1 )
vframes = 5
frame = 2

[node name="attack" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 36 )

[node name="attackSprite" type="Sprite" parent="attack"]
visible = false
position = Vector2( 71.4178, 27.2236 )
texture = ExtResource( 2 )
vframes = 8
frame = 6

[node name="run" type="AnimationPlayer" parent="."]
anims/run = SubResource( 37 )

[node name="runSprite" type="Sprite" parent="run"]
visible = false
position = Vector2( 72.1249, 70.0036 )
texture = ExtResource( 3 )
vframes = 8
frame = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 5, 5 )
frames = SubResource( 63 )
animation = "spawn"
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 13.5, 14.5 )
scale = Vector2( 5, 5 )
shape = SubResource( 65 )

[node name="RayCast2D" type="RayCast2D" parent="."]
scale = Vector2( 5, 5 )
enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
